correção do html

--- a/imovel_certo_app.html
+++ b/imovel_certo_app.html
@@ -20,7 +20,7 @@
 
     <script type="text/babel">
         // --- CONFIGURAÇÃO DA API ---
-        const API_URL = 'gestao-im-vel-certo-production.up.railway.app'; // Ex: https://meu-backend-1234.up.railway.app
+        const API_URL = 'https://gestao-im-vel-certo-production.up.railway.app/'; // Ex: https://meu-backend-1234.up.railway.app
         // -------------------------
 
         const { useState, useEffect, useCallback, useMemo } = React;
