--- a/imovel_certo_app.html
+++ b/imovel_certo_app.html
@@ -19,7 +19,7 @@
 
     <script type="text/babel">
         // --- CONFIGURAÇÃO DA API ---
-        const API_URL = 'http://localhost:3001';
+        const API_URL = 'gestao-im-vel-certo-production.up.railway.app';
         // -------------------------
 
         const { useState, useEffect, useCallback, useMemo } = React;
