--- a/imovel_certo_app.html
+++ b/imovel_certo_app.html
@@ -858,7 +858,7 @@
                         />
                         <KPICard 
                             title="Taxa de Sucesso" 
-                            value={`${data.taxaSucesso}%`} 
+                            value={`${Number(data.taxaSucesso || 0)}%`}
                             icon="Trophy"
                             color="yellow"
                         />
