--- a/imovel_certo_app.html
+++ b/imovel_certo_app.html
@@ -349,10 +349,12 @@
                 e.preventDefault();
                 setIsSubmitting(true);
                 try {
-                    const response = await apiRequest('/api/demandas', {
-                        method: 'POST',
-                        body: JSON.stringify(formData),
-                    });
+                    const response = 
+                    await apiRequest('/api/demandas', {
+                    method: 'POST',
+                    body: formData,
+                });
+
                     
                     if (!response.ok) {
                         const errorData = await response.json();
